fix alignment issues for ino-icon and all its parent components

--- a/packages/elements/src/components/ino-icon-button/ino-icon-button.scss
+++ b/packages/elements/src/components/ino-icon-button/ino-icon-button.scss
@@ -41,6 +41,10 @@ ino-icon-button {
     background-color: $background-color;
     border-radius: 50%;
 
+    &__icon {
+      display: inline-flex;
+    }
+
     .mdc-icon-button__ripple::before,
     .mdc-icon-button__ripple::after {
       background-color: $background-active-color;
