--- a/packages/elements/src/components/ino-icon/ino-icon.scss
+++ b/packages/elements/src/components/ino-icon/ino-icon.scss
@@ -21,6 +21,7 @@
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
+  vertical-align: middle;
 
   i {
     font-size: inherit;
